--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "scripts": {
     "postinstall": "ng build --aot -prod",
-    "start": "node server.js"
+    "start": "node server.js",
+    "deploy": "git push origin master && git push origin master"
   },
   "dependencies": {
     "angular-cli": "1.0.0-beta.22-1",
